Initial runnable version. Need to switch to nondeprecated methods where applicable and fix StackOverflow when closing settings menu.

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 }
 
 mixin {
-    add sourceSets.main, "mixins.${modId}.refmap.json"
+    add sourceSets.main, "${modId}.mixins.refmap.json"
 }
 
 jar.manifest.attributes([
