--- a/gradle.properties
+++ b/gradle.properties
@@ -19,8 +19,5 @@ org.gradle.daemon=false
 
 modVersion=0.1.1
 mavenGroup=me.jellysquid.mods
-modName=sodium
-mcVersion=1.16.5
-forgeVersion=36.0.43
-mcpMapping=20201028
-mcpVersion=1.16.3
+modName=Sodium
+mcVersion=1.12.2
